# FinanceQA

./: .env.example  Makefile  README.md  commands.bat  commands.ps1  development-plan-v2.2.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
backend/api/routes/: admin.py  market.py  query.py
backend/checkpoint/: __init__.py
backend/config/: knowledge_sources.example.json  knowledge_sources.json  models.py  settings.py
backend/core/agent/: coordinator.py  graph.py  graph_with_coordinator.py  state.py
backend/eval/: eval_dataset.json
backend/prompts/: coordinator.md  eval_judge_system.md  eval_qa_system.md  loader.py  react_agent.md  react_agent_strict.md
backend/scripts/: download_reranker.py  evaluate_model.py  refresh_knowledge.py  test_agent_output.py  test_async_tools.py  test_coordinator.py  test_fetchers.py  test_news_nvidia.py  test_selective_retry.py  test_time_context.py
backend/services/: cache_service.py  embedding.py  knowledge_manager.py  llm_client.py
backend/services/fetchers/: __init__.py  base.py  local_file.py  tavily.py  web_page.py  wikipedia.py  yahoo_finance.py
backend/skills/: README.md  __init__.py  common.py
backend/skills/fundamentals/: __init__.py  prompt.md  test_cases.json  tool.py
backend/skills/market_data/: prompt.md  prompt.txt  test_cases.json  tool.py
backend/skills/news/: prompt.md  prompt.txt  test_cases.json  tool.py
backend/skills/rag_search/: prompt.md  test_cases.json  (+1 more)
backend/tests/: conftest.py  test_agent.py  test_knowledge_manager.py  test_skills.py
(+36 files in other folders)
